--- a/style.css
+++ b/style.css
@@ -4,10 +4,69 @@
     box-sizing: border-box;
 }
 
+ul li{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+}
+
 :root{
+    --title-color:#1F1534;
+    --span-color:#89C5CC;
+    --button-color:#69B99D;
+
+    --font-Open:'Open Sans', sans-serif;
+    --font-Mulish:'Mulish', sans-serif;
     font-size: 62.5%;
 }
 
 body{
+    background: linear-gradient(180deg, rgba(227, 255, 248, 0) 82.08%, rgba(227, 255, 248, 0.38) 100%);
+    height: 100vh;
+    width: 100%;
     font-size: 1.6rem;
 }
+
+.container{
+    max-width: 100rem;
+    margin: 0 auto;
+    padding-top: 6.5rem;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ul{
+    display: flex;
+    gap: 4.8rem;
+    align-items: center;
+    justify-content: center;
+}
+
+ul li a{
+    font-size: 1.8rem;
+    color: var(--title-color);
+    opacity: 0.5;
+    font-weight: bold;
+    transition: 0.5s;
+    line-height: 23px;
+}
+
+ul li a:hover{
+    color: var(--title-color);
+    opacity: 1;
+    transition: 0.5s;
+}
+
+main{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 5.5rem;
+}
+
