--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ a{
 
 body{
     background: linear-gradient(180deg, rgba(227, 255, 248, 0) 82.08%, rgba(227, 255, 248, 0.38) 100%);
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     font-size: 1.6rem;
 }
